--- a/MemCachedLib/MemCachedLib.csproj
+++ b/MemCachedLib/MemCachedLib.csproj
@@ -31,6 +31,7 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <DocumentationFile>bin\Release\MemCachedLib.XML</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup>
     <StartupObject />
